// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 fMCGPT bg-theme-background undefined"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 fMCGPT bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 yRBNV bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 gBIrIF bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 fMCGPT bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 fklskl bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 iAMNLr bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 DPtOY bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 hJWeDA bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 ibJGey bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'lg' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 gOwpmH bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'md' 1`] = `
<div>
  <span
    class="flex justify-center items-center align-middle rounded-full border-2 border-transparent Badge__Wrapper-sc-1d7juq8-0 fMCGPT bg-theme-background undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;
